--- a/index.css
+++ b/index.css
@@ -1,1 +1,28 @@
 @import 'tailwindcss';
+@font-face {
+  font-family: 'Museo Sans Cyrl';
+  src: url('/src/assets/fonts/Museo\ Sans\ Cyrl\ 500.ttf') format('opentype');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Museo Sans Cyrl';
+  src: url('/src/assets/fonts/Museo\ Sans\ Cyrl\ 700.ttf') format('opentype');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+@theme {
+  --font-museo: 'Museo Sans Cyrl', sans-serif;
+  --color-violet: #4f62f6;
+  --color-violet-light: #7181fc;
+  --color-violet-dark: #354bf4;
+  --color-white: #ffffff;
+  --color-gray: #333333;
+  --color-gray-light: #e0e0e0;
+  --color-gray-dark: #828282;
+}
+@utility button {
+  @apply uppercase py-[20px] px-[64px] rounded-[60px] bg-[--color-violet] text-[--color-white] font-museo text-base transition hover:bg-violet-light active:bg-violet-dark disabled:cursor-not-allowed disabled:bg-gray-light disabled:text-gray-dark;
+}
