--- a/index.css
+++ b/index.css
@@ -4,14 +4,14 @@
   font-family: 'Museo Sans Cyrl';
   src: url('/src/assets/fonts/Museo\ Sans\ Cyrl\ 500.ttf') format('opentype');
   font-weight: 500;
-  font-style: normal;
+  font-style: bold;
   font-display: swap;
 }
 @font-face {
   font-family: 'Museo Sans Cyrl';
   src: url('/src/assets/fonts/Museo\ Sans\ Cyrl\ 700.ttf') format('opentype');
   font-weight: 700;
-  font-style: normal;
+  font-style: extrabold;
   font-display: swap;
 }
 @theme {
